tests/subtyping/sum-types/ill-typed/sum-types-3.stella
language core;
extend with
  #structural-subtyping,
  #top-type,
  #sum-types;

fn main(x : Nat) -> Nat + Top {
  return inl(true)
}
